[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msts-trader"
version = "0.16.2"
description = "Paste a target-weights CSV, preview the rebalance, execute it on your brokerage account. Tastytrade + Alpaca + Tradier + IBKR + Schwab + Hyperliquid + paper."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "markudevelop" }]
keywords = ["trading", "tastytrade", "alpaca", "tradier", "ibkr", "schwab", "hyperliquid", "rebalance", "portfolio", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tastytrade==11.0.4",
    "alpaca-py>=0.30",
    "click>=8.1",
    "rich>=13.7",
    "keyring>=24",
    "pydantic>=2.5",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
ibkr = ["ib_insync>=0.9.86", "nest_asyncio>=1.6"]
schwab = ["schwab-py>=1.4"]
hyperliquid = ["hyperliquid-python-sdk>=0.9", "eth-account>=0.10"]
all = ["ib_insync>=0.9.86", "nest_asyncio>=1.6", "schwab-py>=1.4", "hyperliquid-python-sdk>=0.9", "eth-account>=0.10"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[project.scripts]
msts-trader = "msts_trader.__main__:main"

[project.urls]
Homepage = "https://github.com/markudevelop/msts-trader"
Issues = "https://github.com/markudevelop/msts-trader/issues"

[tool.setuptools.packages.find]
include = ["msts_trader*"]

[tool.setuptools.package-data]
msts_trader = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"
